tests/num-record-03/out.txt
error: mismatched types: expected { 1 : int }, found unit
  ┌─ err.sml:2:1
  │
2 │ val _: t = ()
  │ ^^^^^^^^^^^^^

typechecking failed
